[package]
name = "rust-pkl-cli"
version = "0.1.0"
edition = "2021"
authors = ["Juha Västi"]

[[bin]]
name = "rust-pkl-cli"
path = "src/main.rs"

[dependencies]
new-pkl = { git = "https://github.com/jvasti/new-pkl/", features = [
  "serde_support",
], branch = "serde-serialization" }
anyhow = "1.0.93"
camino = "1.1.9"
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_yml = "0.0.12"
toml = "0.8.19"

[dev-dependencies]
trycmd = "0.15.8"
